--- a/web/static/html/running_state.html
+++ b/web/static/html/running_state.html
@@ -6,18 +6,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     
-    <title>Pintd Configuration</title>
-  
-    <!-- 引入核心CSS文件 layui.css -->
-    <link rel="stylesheet" href="../../layui/css/layui.css">
-  
-    <!-- 引入 核心JS文件 layui.js -->
+    <title>Running State</title>
+
+  <!-- 引入核心CSS文件 layui.css -->
+  <link rel="stylesheet" href="../../layui/css/layui.css">
+
+  <!-- 引入 核心JS文件 layui.js -->
   <script src="../../layui/layui.js"></script>
-  
 </head>
 
 <!--------------------------------------- Body ------------------------------------>
 <body class="layui-layout-body">
+
+  <!-- 显示连接，通信是否正常、以及流量统计 -->
+
   <div class="layui-container">
     <!-- 按钮 -->
     <div class="layui-btn-container">
