--- a/web/static/html/indirect_config_show.html
+++ b/web/static/html/indirect_config_show.html
@@ -1,4 +1,27 @@
+<!-- 二、展示配置块(尾部加删除框) 删除配置询问是否关闭相应的连接， 不关闭也可以在运行状态里面看到的， 运行状态里面可以关闭 -->
+<!DOCTYPE html>
+<html>
 
+<!--------------------------------------- Head ------------------------------------>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    
+    <title>Indirect Config</title>
 
-    <!-- 二、展示配置块(尾部加删除框) 
-    删除配置询问是否关闭相应的连接， 不关闭也可以在运行状态里面看到的， 运行状态里面可以关闭 -->
+    <!-- 引入核心CSS文件 layui.css -->
+    <link rel="stylesheet" href="../../layui/css/layui.css">
+
+    <!-- 引入 核心JS文件 layui.js -->
+    <script src="../../layui/layui.js"></script>
+
+    <!-- 引入本HTML用到的JS -->
+    <script src="../js/indirect_config_show.js"></script>
+</head>
+
+<!--------------------------------------- Body ------------------------------------>
+<body class="layui-layout-body">
+
+</body>
+
+</html>
