通过数据表格可以显示后端传来的端口重定向配置的信息。

--- a/web/static/html/indirect_config_show.html
+++ b/web/static/html/indirect_config_show.html
@@ -10,18 +10,20 @@
     <title>Indirect Config</title>
 
     <!-- 引入核心CSS文件 layui.css -->
-    <link rel="stylesheet" href="../../layui/css/layui.css">
+    <link rel="stylesheet" href="/web/layui/css/layui.css">
 
     <!-- 引入 核心JS文件 layui.js -->
-    <script src="../../layui/layui.js"></script>
+    <script src="/web/layui/layui.js"></script>
 
     <!-- 引入本HTML用到的JS -->
-    <script src="../js/indirect_config_show.js"></script>
+    <script src="/web/static/js/indirect_config_show.js"></script>
 </head>
 
 <!--------------------------------------- Body ------------------------------------>
 <body class="layui-layout-body">
 
+    <table id="indirect_cfg_show"></table>
+    <div id="page"></div>
 </body>
 
 </html>
