--- a/web/static/html/indirect_config_new.html
+++ b/web/static/html/indirect_config_new.html
@@ -10,13 +10,13 @@
     <title>Indirect Config</title>
 
     <!-- 引入核心CSS文件 layui.css -->
-    <link rel="stylesheet" href="../../layui/css/layui.css">
+    <link rel="stylesheet" href="/web/layui/css/layui.css">
 
     <!-- 引入 核心JS文件 layui.js -->
-    <script src="../../layui/layui.js"></script>
+    <script src="/web/layui/layui.js"></script>
 
     <!-- 引入本HTML用到的JS -->
-    <script src="../js/indirect_config_new.js"></script>
+    <script src="/web/static/js/indirect_config_new.js"></script>
 </head>
 
 <!--------------------------------------- Body ------------------------------------>
@@ -28,9 +28,9 @@
             <label class="layui-form-label">协议</label>
             <div class="layui-input-inline">
                 <select name="protocol" lay-verify="required">
-                    <option value="100">选择协议</option>
-                    <option value="101" selected>TCP</option>
-                    <option value="102">UDP</option>
+                    <option value="TCP">选择协议</option>
+                    <option value="TCP" selected>TCP</option>
+                    <option value="UDP">UDP</option>
                 </select>
             </div>
         </div>
@@ -86,7 +86,7 @@
             <div class="layui-input-block">
                 <input type="radio" name="acl" value="blacklist" title="黑名单">
                 <input type="radio" name="acl" value="whitelist" title="白名单">
-                <input type="radio" name="acl" value="disabled" title="禁用" checked>
+                <input type="radio" name="acl" value="disable" title="禁用" checked>
             </div>
         </div>
         
