--- a/web/static/html/indirect_config_new.html
+++ b/web/static/html/indirect_config_new.html
@@ -122,7 +122,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">备注信息</label>
             <div class="layui-input-block">
-                <textarea name="memo" placeholder="请输入本条配置的备注(选填)" class="layui-textarea"></textarea>
+                <textarea name="memo" placeholder="请输入本条配置的备注(选填, 200字以内)" class="layui-textarea"></textarea>
             </div>
         </div>
 
