--- a/web/static/html/running_state.html
+++ b/web/static/html/running_state.html
@@ -9,112 +9,47 @@
     <title>Running State</title>
 
   <!-- 引入核心CSS文件 layui.css -->
-  <link rel="stylesheet" href="../../layui/css/layui.css">
+  <link rel="stylesheet" href="/web/layui/css/layui.css">
 
   <!-- 引入 核心JS文件 layui.js -->
-  <script src="../../layui/layui.js"></script>
+  <script src="/web/layui/layui.js"></script>
+
+  <!-- 引入本文件使用的JS文件 -->
+  <script src="/web/static/js/running_state.js"></script>
 </head>
 
 <!--------------------------------------- Body ------------------------------------>
 <body class="layui-layout-body">
-
   <!-- 显示连接，通信是否正常、以及流量统计 -->
+  <table id="running_state" lay-filter="table"></table>
 
-  <div class="layui-container">
-    <!-- 按钮 -->
-    <div class="layui-btn-container">
-      <button class="layui-btn layui-btn-normal" test-active="test-form">
-        <!-- 添加图标 -->
-        <i class="layui-icon layui-icon-addition"></i>录入
-      </button>
+      <!-- 表格工具栏 -->
+      <script type="text/html" id="toolbar">
+        <!-- 选择框 -->
+        <div class="layui-inline" style="float:left; height:29px;">
+          <select name="columns">
+            <option value="all">选择列为过滤条件进行搜索</option>
+            <option value="protocol">协议</option>
+            <option value="src-addr">源地址</option>
+            <option value="src-port">源端口</option>
+            <option value="dest-addr">目的地址</option>
+            <option value="dest-port">目的端口</option>
+            <option value="running-time">运行时间</option>
+          </select>
+        </div>
 
-      <button class="layui-btn layui-btn-normal" id="test2">
-        <i class="layui-icon layui-icon-time"></i>当前日期
-      </button>
+        <!-- 搜索框 -->
+        <div class="layui-inline" style="float:right;height:29px;" title="搜索" lay-event="LAYTABLE_SEARCH">
+          <i class="layui-icon layui-icon-search"></i>
+        </div> 
+	      <input type="text" id="key" style="width:200px;float:right;height:30px;"
+                placeholder="搜索" autocomplete="off" class="layui-input">
+    </script>
 
-      <button class="layui-btn layui-btn-normal">
-        <i class="layui-icon layui-icon-loading"></i>加载中
-      </button>
+    <!-- 表头工具栏 -->
+    <script type="text/html" id="editbar">
+        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="terminate">终止此任务</a>
+    </script>
 
-      <button class="layui-btn layui-btn-disabled">禁用按钮</button>
-    </div>
-    
-    <blockquote class="layui-elem-quote" style="margin-top: 30px;">
-      <div class="layui-text">
-        <ul>
-          <li>你当前预览的是：<span>layui-v<span id="version"></span></span></li>
-          <li>layui 是一套开源的 Web UI（界面）组件库。这是一个极其简洁的演示页面</li>
-        </ul>
-      </div>
-    </blockquote>
-
-  </div>
 </body>
-
-<script>
-  layui.use(function() {
-    var layer = layui.layer
-    ,form = layui.form
-    ,laypage = layui.laypage
-    ,element = layui.element
-    ,laydate = layui.laydate
-    ,util = layui.util;
-
-    //欢迎信息
-    layer.msg('Hello World');
-
-    //输出版本号
-    lay('#version').html(layui.v);
-
-    //日期
-    laydate.render({
-      elem: '#test2'
-      ,value: new Date()
-      ,isInitValue: true
-    });
-
-    //触发事件
-    util.event('test-active', {
-    'test-form': function() {
-        layer.open({
-        type: 1
-        ,resize: false
-        ,shadeClose: true
-        ,area: '350px'
-        ,title: 'layer + form'
-        ,content: ['<ul class="layui-form layui-form-pane" style="margin: 15px;">'
-            ,'<li class="layui-form-item">'
-            ,'<label class="layui-form-label">输入框</label>'
-            ,'<div class="layui-input-block">'
-                ,'<input class="layui-input" lay-verify="required" name="field1">'
-            ,'</div>'
-            ,'</li>'
-            ,'<li class="layui-form-item">'
-            ,'<label class="layui-form-label">选择框</label>'
-            ,'<div class="layui-input-block">'
-                ,'<select name="field2">'
-                ,'<option value="A">A</option>'
-                ,'<option value="B">B</option>'
-                ,'<select>'
-            ,'</div>'
-            ,'</li>'
-            ,'<li class="layui-form-item" style="text-align:center;">'
-            ,'<button type="submit" lay-submit lay-filter="*" class="layui-btn">提交</button>'
-            ,'</li>'
-        ,'</ul>'].join('')
-        ,success: function(layero, index){
-            layero.find('.layui-layer-content').css('overflow', 'visible');
-            
-            form.render().on('submit(*)', function(data){
-              layer.msg(JSON.stringify(data.field), {icon: 1});
-              //layer.close(index); //关闭层
-            });
-        }
-      });
-    }
-  });
-});
-
-</script>
-
 </html>
